test/simple/ill-typed/singletype_bool_int.caprice
(* TEST
  include refute;
*)


let t : singleton bool = int
